# SearchLight

./: README-RU.md  README.md  pyproject.toml  repo_struct.txt  tmp.txt
.staff/: Improvement.txt  api_table.txt  tmp.txt
config/: config.yaml
searchlight/: cli.py  main.py
searchlight/core/: auth.py  cli.py
searchlight/services/: cat.py  index_management.py  ism_policies.py  nodes.py  policies.py  security.py  tasks.py
searchlight/utils/: custom_themes.py  formatters.py  get_client.py  logger.py
tests/: hot-thread.txt
tests/files/: ism.json
tests/health/: cluster_health.py  cluster_health_output.txt
