[project]
name = "searchlight"
version = "0.1.0"
description = "OpenSearch-SwissKnife"
authors = [
    {name = "Danila Epishev",email = "DEpishev@alfabank.ru"}
]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "opensearch-py (==3.1.0)",
    "typer (==0.24.1)",
    "python-dotenv (==1.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
